--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     line-height: 1.5;
+    background-color: rgba(0,0,0,.1);
 }
 
 
@@ -43,7 +44,7 @@ a {
 }
 
 a:hover {
-    color: rgba(116, 165, 84, 0.8)
+    color: rgba(116, 165, 84, 0.8);
 }
 
 
@@ -58,6 +59,13 @@ a:hover {
 .preimg img {
     max-width: 100%;
     height: auto;
+}
+
+.preimg .olympic {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 80%;
 }
 
 
@@ -111,6 +119,12 @@ a:hover {
 }
 
 /* SECTIONS */
-.preview {
-    background-color: rgba(0,0,0,.02);
+.preimg {
+    margin-bottom: 4em;
+}
+
+.preimg h3 {
+    font-size: 2em;
+    margin-top: 0.4em;
+    text-align: center;
 }
