--- a/css/style.css
+++ b/css/style.css
@@ -33,7 +33,7 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     line-height: 1.5;
-    background-color: rgba(0,0,0,.1);
+    /* background-color: rgba(0,0,0,.1); */
 }
 
 
@@ -56,9 +56,15 @@ a:hover {
 }
 
 /* IMAGE */
-.preimg img {
+img {
     max-width: 100%;
     height: auto;
+}
+
+.sub-main img {
+    max-width: 50%;
+    margin: 0 auto;
+    border-radius: 50%;
 }
 
 .preimg .olympic {
@@ -66,6 +72,18 @@ a:hover {
     margin-left: auto;
     margin-right: auto;
     max-width: 80%;
+}
+
+/* MEDIA QUARIES */
+@media(max-width: 768px) {
+    body {
+        margin-left: 1.5em;
+        margin-right: 1.5em;
+    }
+
+    .sub-main img {
+        max-width: 80%;
+    }
 }
 
 
@@ -97,6 +115,7 @@ a:hover {
     display: flex;
     list-style: none;
     justify-content: center;
+    padding: 0;
     /* margin: 0; */
 }
 
@@ -119,12 +138,28 @@ a:hover {
 }
 
 /* SECTIONS */
+.preview .container {
+    background-color: rgba(0,0,0,.03);
+}
+
 .preimg {
-    margin-bottom: 4em;
+    padding: 2em;
 }
 
 .preimg h3 {
     font-size: 2em;
     margin-top: 0.4em;
     text-align: center;
+}
+
+
+/* SUB-PAGES */
+
+/* ABOUT */
+.sub-main {
+    margin: 0 auto;
+    margin-top: 8em;
+    margin-bottom: 4em;
+    text-align: center;
+    max-width: 60%;
 }
