--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,24 @@ img {
     max-width: 80%;
 }
 
+.grid-container {
+    display: grid;
+    padding: 1em;
+    margin-top: 3em;
+    background-color: rgba(0,0,0,.05);
+    grid-template-columns: 580px 580px;
+    grid-template-rows: 850px 550px auto;
+    grid-gap: 1em;
+}
+
+.grid-item4 {
+    padding-top: 394px;
+}
+
+.grid-container img {
+    max-width: 100%;
+}
+
 /* MEDIA QUARIES */
 @media(max-width: 768px) {
     body {
@@ -83,6 +101,26 @@ img {
 
     .sub-main img {
         max-width: 80%;
+    }
+}
+
+@media(max-width: 1200px) {
+    body {
+        margin-left: 1.5em;
+        margin-right: 1.5em;
+    }
+
+    .grid-container {
+        display: block;
+        padding: 1.5em;
+    }
+
+    .grid-container img {
+        margin-bottom: 1em;
+    }
+
+    .grid-item4 {
+        padding-top: 0;
     }
 }
 
@@ -162,4 +200,18 @@ img {
     margin-bottom: 4em;
     text-align: center;
     max-width: 60%;
+}
+
+.work-main {
+    margin-top: 4em;
+}
+
+.work-main h1 {
+    font-size: 3em;
+    line-height: 1.2;
+    margin-bottom: 0;
+}
+
+.work-main p {
+    max-width: 80%;
 }
