--- a/css/style.css
+++ b/css/style.css
@@ -28,7 +28,7 @@
 body {
     display: block;
     font-size: 87.5%;          
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    font-family: Acumin Pro, Georgia, Times, 'Times New Roman', serif;
     color: rgba(0,0,0,.8);
     max-width: 1200px;
     margin: 0 auto;
@@ -166,7 +166,7 @@ img {
 .h2header h2 {
     margin-top: 3em;
     font-size: 2em;
-    font-style: italic;
+    /* font-style: italic; */
 }
 
 /* LOGO */
@@ -200,12 +200,14 @@ img {
 }
 
 .hero h1 {
-    font-size: 3.5em;
+    font-size: 4em;
+    font-weight: lighter;
 }
 
 /* SECTIONS */
 .preview .container {
     background-color: rgba(0,0,0,.03);
+    display: grid;
 }
 
 .preimg {
@@ -228,6 +230,12 @@ img {
     margin-bottom: 4em;
     text-align: center;
     max-width: 60%;
+}
+
+.sub-main p {
+    max-width: 60%;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .work-main {
